bpo-40696: Prevent hangs after gen.throw().